feat: 🎸 App.vue 加上 RouterView

--- a/src/assets/style/global.css
+++ b/src/assets/style/global.css
@@ -2,9 +2,15 @@
 html,
 body {
     @apply w-full h-full;
-    background: #1e1e1e;
+    @apply bg-gray-900;
+}
+
+#app {
+    @apply h-full;
 }
 
 @theme {
-    --color-gray-100: #e0e0e0;
+    --color-gray-900: #111827;
+    --color-gray-300: #272627;
+    --color-gray-200: #f2f3f3;
 }
